Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103706

Synthesized touch event not recognized with Widgets

XMLWordPrintable

    • Linux/X11
    • QTBUG-102751 efc02f9cc3 (qt/qtbase/dev) efc02f9cc3 (qt/tqtc-qtbase/dev) b0de19a831 (qt/qtbase/6.3) b0de19a831 (qt/tqtc-qtbase/6.3) b0de19a831 (qt/qtbase/6.3.1) 7380edaeb8 (qt/tqtc-qtbase/5.15) 7380edaeb8 (qt/tqtc-qtbase/5.15-vxworks)

      To reproduce the issue:

      1. Please run the attached example.
      2. Click on the button.
      3. Click the window outside of the opened popup menu.
      4. Click on the button again.

      The following output comes and the button does not work anymore to open the menu.

      qt.pointer.dispatch: delivering touch update to same window QWidgetWindow(0x5612443e1e10, name="QMenuClassWindow") not QWidgetWindow(0x561244524c00, name="TouchDemoClassWindow")

        1. qtbug_103706.zip
          12 kB
          Tuomas Vaarala
        For Gerrit Dashboard: QTBUG-103706
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: