Change "delivering touch to same window" warnings to debug messages

When you touch-tap a QPushButton, and that opens a popup, it's normal
that the touch release is delivered to the main window rather than the
popup: in fact QWidgetWindow::handleMouseEvent() expects to see a
synth-mouse release. No warning is needed. Amends
efc02f9cc301f98c77079adae026ffd07f50d5ab

There may be other cases when it should have remained a warning (it's
been there since 2692237bb1b0c0f50b7cc5d920eb8ab065063d47), but that's
hypothetical at this point.

Task-number: QTBUG-103706
Change-Id: Ie8cc62af4d173ada5138fd099d9f02bd41f4cff4
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 03a691cecb91ea91394d40b0b7e1b15210fc5687)